- add a "copy" tag to facilitate writing plugins with both dialog and wizard interfaces		TODO: document, convert all wizards to use this
- fixed: graph previews would stop working when the interface is switched from dialog to wizard or vice versa
- new options for plugin dialogs: Configure whether code display is by default, and at what size

--- Version 0.4.6 - Feb-15-2007
- make sure any LC_ALL environment setting will not be applied by SCIM plugin (if installed on the system)
- fix crash after changing storage type of an object in the data editor
- single line input fields in plugins no longer accept new-lines
- support for calculating p-values in correlation matrix plugin
- fixed: pressing F8 in the console would remove input focus from the console
- pressing tab changes focus while in a single line text input field
- fix several small problems with detached windows
- fix a problem with keeping the list of objects up to date
- improvements to spinbox: step size is adjusted dynamically, and no arbitrary limits in real mode
- fixed problem with specifying y axis limits in several plugins
- simplified CSV import plugin
- new plugin: import SPSS files
- new documentation pages: console
- various improvements to existing distribution and distribution plot plugins
- new plugins: distribution plots: beta, binomial, cauchy, exponential, gamma, geometric, hypergeometric,
		logistics, lognormal, negative binomail, tukey, uniform, weibull, wilcoxon
- fixed: installing packages as root would not work, when $R_HOME is not defined
- new plugin element to select name of an R object to save to
- new plugin: Ansari-Bradley two-sample test
- place internal objects .rk.rkreply and .rk.available.packages.cache into rkward package environment
- support for preview functionality in graphing plugins
- new plugin: barplot
- new plugin: export contents of an X11 device to several different file formats
- plugins can now be context sensitive (e.g. work on a particular x11 device)